# openmind

./: .env.example  .gitignore  AGENTS.md  CAPABILITIES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Canvas_Bot_Improvements.md  Dockerfile  HEARTBEAT.md  LICENSE  Nanobot_Guide.md  Obsidian_bCourses_Strategy.md  PLAN.md  README.md  SECURITY.md  SETUP.md  SOUL.md  USER.md  config.example.json  docker-compose.yml  pyproject.toml  qa_check.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-website.yml  publish.yml
docs/: ARCHITECTURE.md  ASCII_ART.md  CLI_DESIGN.md  CONTRIBUTING.md  DISTRIBUTION.md  FEATURES.md  OpenMind_Documentation.md  OpenMind_Full_Documentation.md  PRIVACY.md  SETUP.md  TOOLS.md  TYPOGRAPHY.md
setup/: CAPABILITIES.md  SETUP.md
src/openmind/: __init__.py  __main__.py  banner.py  bot.py  cli.py  config.py  heartbeat.py  llm.py  memory.py  personality.py  repl.py  setup_wizard.py  universities.py
src/openmind/data/: graduate_courses.csv  undergraduate_courses.csv
src/openmind/tools/: __init__.py  berkeley.py  calendar.py  canvas.py  courses.py  gmail.py  gpa.py  obsidian.py  pdf.py  profile.py  reminders.py  slack.py  studyguide.py  todoist.py  web.py
tests/: test_cli_and_setup.py  test_config.py  test_heartbeat_runtime.py  test_llm.py  test_profile.py  test_release_contract.py
website/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
website/public/: CNAME
website/src/components/: Demos.astro  Features.astro  Footer.astro  Hero.astro  Install.astro  Nav.astro  Personality.astro  Privacy.astro  Questions.astro
website/src/layouts/: Layout.astro
website/src/pages/: index.astro  use-cases.astro
website/src/pages/guides/: bcourses.astro  calendar.astro  gmail.astro  index.astro  openrouter.astro  slack.astro  telegram.astro
website/src/styles/: global.css
workspace/: AGENTS.md  HEARTBEAT.md  SOUL.md  USER.md  check_deadlines.py  check_submissions.py  courses.json  grade_history.py  read_pdf.py
