[project]
name = "openmind"
version = "0.1.0"
description = "AI-powered Canvas LMS study buddy for UC Berkeley — runs from your terminal"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "openai>=1.30",
    "httpx>=0.27",
    "pymupdf>=1.24",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]
gmail = ["google-auth-oauthlib>=1.0", "google-api-python-client>=2.0"]
calendar = ["google-auth-oauthlib>=1.0", "google-api-python-client>=2.0"]
all = ["python-telegram-bot>=21.0", "google-auth-oauthlib>=1.0", "google-api-python-client>=2.0"]

[project.urls]
Homepage = "https://github.com/qazybekb/openmind"
Repository = "https://github.com/qazybekb/openmind"

[project.scripts]
openmind = "openmind.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openmind"]
