[project]
name = "openmind-berkeley"
version = "1.0.0"
description = "AI-powered Canvas LMS study buddy for UC Berkeley — runs from your terminal"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Qazybek Beken" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["berkeley", "canvas", "study-buddy", "cli", "llm", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "openai>=1.30",
    "httpx>=0.27",
    "pymupdf>=1.24",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]
gmail = ["google-auth-oauthlib>=1.0", "google-api-python-client>=2.0"]
calendar = ["google-auth-oauthlib>=1.0", "google-api-python-client>=2.0"]
all = ["python-telegram-bot>=21.0", "google-auth-oauthlib>=1.0", "google-api-python-client>=2.0"]

[project.urls]
Homepage = "https://github.com/qazybekb/openmind"
Repository = "https://github.com/qazybekb/openmind"
Documentation = "https://github.com/qazybekb/openmind/blob/main/docs/SETUP.md"
Changelog = "https://github.com/qazybekb/openmind/blob/main/CHANGELOG.md"
Issues = "https://github.com/qazybekb/openmind/issues"

[project.scripts]
openmind = "openmind.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openmind"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/openmind",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/SECURITY.md",
    "/CODE_OF_CONDUCT.md",
    "/docs",
]
